@@ -19,7 +19,7 @@ public class ProblemSet {
 
 
 
-    public static Double average(ArrayList<Double> numbers) {       // DOUBLE IS THE RETURN VARIABLE
+    public static double average(ArrayList<Double> numbers) {       // DOUBLE IS THE RETURN VARIABLE
         double acc = 0.0;
 
         if (numbers.isEmpty()) {
@@ -117,8 +117,8 @@ public class ProblemSet {
     // TODO: Write a public static method named bestKey that takes a HashMap of String to Integer
     //       as a parameter and returns a key mapping to the largest Integer. Ties can be broken arbitrarily.
     //       If the HashMap is empty, return the empty String
-    public static int bestKey(HashMap<String,Integer> map) {
-        int retVal = 0;
+    /*public static String bestKey(HashMap<String,Integer> map) {
+        //int retVal = 0;
         map.put("bills",6080000);
         map.put("CSE",  80000);
         map.put("MTH", 900000);
@@ -138,9 +138,11 @@ public class ProblemSet {
         }
 
 
-        return retVal ;
+        return "g" ;
 
          }
+         */
+
 // NEED TO BE ABLE TO PUT THE RETURN STATEMENT SOMEWHERE
 
     // Examples
@@ -153,17 +155,17 @@ public class ProblemSet {
 
 
     public static void main(String[] args) {
-       ArrayList<Double> numbers = new ArrayList<>(List.of());
+       ArrayList<Double> numbers = new ArrayList<>(Arrays.asList(2.0));
 
-       //System.out.println(average(numbers));
+       System.out.println(average(numbers));
 
-       //System.out.println( "THOUSANDS " + sumOfDigits(-123) + "\n" );
+       //System.out.println( "THOUSANDS " + sumOfDigits(0) + "\n" );
        //System.out.println( "HUNDREDS " + sumOfDigits(-57));
        //System.out.println( "HUNDREDS " + sumOfDigits(36));
 
         HashMap<String,Integer> map = new HashMap<>();
 
-        System.out.println(bestKey(map));
+        //System.out.println(bestKey(map));
 
 
 
